// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RoutesTable /> Renders the table with line data 1`] = `
<DocumentFragment>
  <table
    class="h-1 w-full "
    data-testid="routesTable1"
  >
    <tbody>
      <tr
        class="border-r border-r-light-grey "
        data-testid="RouteLineTableRow::row::65"
      >
        <td
          class="border-l-10 border-hsl-dark-green border-y border-y-light-grey p-4"
        />
        <td
          class="w-full py-4 border-y border-y-light-grey"
        >
          <a
            class=""
            data-discover="true"
            href="/lines/101f800c-39ed-4d85-8ece-187cd9fe1c5e"
          >
            <div
              class="flex flex-row items-center"
              title=""
            >
              <div
                class="flex flex-col w-1/2 font-bold"
              >
                <div
                  class="flex flex-row items-center"
                  title=""
                >
                  <h2>
                    65
                  </h2>
                  <i
                    class="icon-bus-alt text-2xl text-tweaked-brand"
                    role="img"
                    title="Bussilinja"
                  />
                </div>
                <p>
                  Rautatientori - Veräjälaakso
                </p>
              </div>
              <div
                class="flex flex-col w-1/2 text-right"
              >
                <p
                  class="font-bold"
                >
                  Voimassa 1.1.1970 - 31.12.2050
                </p>
                <p>
                  !Muokattu dd.mm.yyyy hh:mm | S. Suunnittelija
                </p>
              </div>
            </div>
          </a>
        </td>
        <td
          class="w-1/12 pl-6 text-right align-middle border-y border-y-light-grey"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand !bg-background opacity-70 pointer-events-none"
            data-testid="LocatorButton::button"
            disabled=""
            title="Näytä aikataulut linjalle 65"
            type="button"
          >
            <i
              aria-hidden="true"
              class="icon-calendar inline text-center"
            />
          </button>
        </td>
        <td
          class="w-1/12 p-6 text-right align-middle border-y border-y-light-grey"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:outline hover:outline-1 hover:outline-tweaked-brand hover:border-tweaked-brand hover:bg-opacity-50 disabled:pointer-events-none disabled:bg-background disabled:opacity-70"
            data-testid="LineTableRow::showLineRoutes"
            title="Näytä kartalla linja 65"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-2xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 1 1-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
      </tr>
      <tr
        class="border-r border-r-light-grey "
        data-testid="RouteLineTableRow::row::71"
      >
        <td
          class="border-l-10 border-hsl-dark-green border-y border-y-light-grey p-4"
        />
        <td
          class="w-full py-4 border-y border-y-light-grey"
        >
          <a
            class=""
            data-discover="true"
            href="/lines/9058c328-efdd-412c-9b2b-37b0f6a2c6fb"
          >
            <div
              class="flex flex-row items-center"
              title=""
            >
              <div
                class="flex flex-col w-1/2 font-bold"
              >
                <div
                  class="flex flex-row items-center"
                  title=""
                >
                  <h2>
                    71
                  </h2>
                  <i
                    class="icon-bus-alt text-2xl text-tweaked-brand"
                    role="img"
                    title="Bussilinja"
                  />
                </div>
                <p>
                  Rautatientori - Malmi as.
                </p>
              </div>
              <div
                class="flex flex-col w-1/2 text-right"
              >
                <p
                  class="font-bold"
                >
                  Voimassa 1.1.1970 - 31.12.2050
                </p>
                <p>
                  !Muokattu dd.mm.yyyy hh:mm | S. Suunnittelija
                </p>
              </div>
            </div>
          </a>
        </td>
        <td
          class="w-1/12 pl-6 text-right align-middle border-y border-y-light-grey"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand !bg-background opacity-70 pointer-events-none"
            data-testid="LocatorButton::button"
            disabled=""
            title="Näytä aikataulut linjalle 71"
            type="button"
          >
            <i
              aria-hidden="true"
              class="icon-calendar inline text-center"
            />
          </button>
        </td>
        <td
          class="w-1/12 p-6 text-right align-middle border-y border-y-light-grey"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:outline hover:outline-1 hover:outline-tweaked-brand hover:border-tweaked-brand hover:bg-opacity-50 disabled:pointer-events-none disabled:bg-background disabled:opacity-70"
            data-testid="LineTableRow::showLineRoutes"
            title="Näytä kartalla linja 71"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-2xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 1 1-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
      </tr>
      <tr
        class="border-r border-r-light-grey "
        data-testid="RouteLineTableRow::row::785K"
      >
        <td
          class="border-l-10 border-hsl-dark-green border-y border-y-light-grey p-4"
        />
        <td
          class="w-full py-4 border-y border-y-light-grey"
        >
          <a
            class=""
            data-discover="true"
            href="/lines/bbd1cb29-74c3-4fa1-ac86-918d7fa96fe2"
          >
            <div
              class="flex flex-row items-center"
              title=""
            >
              <div
                class="flex flex-col w-1/2 font-bold"
              >
                <div
                  class="flex flex-row items-center"
                  title=""
                >
                  <h2>
                    785K
                  </h2>
                  <i
                    class="icon-bus-alt text-2xl text-tweaked-brand"
                    role="img"
                    title="Bussilinja"
                  />
                </div>
                <p>
                  Rautatientori - Nikkilä
                </p>
              </div>
              <div
                class="flex flex-col w-1/2 text-right"
              >
                <p
                  class="font-bold"
                >
                  Voimassa 1.1.1970 - 31.12.2050
                </p>
                <p>
                  !Muokattu dd.mm.yyyy hh:mm | S. Suunnittelija
                </p>
              </div>
            </div>
          </a>
        </td>
        <td
          class="w-1/12 pl-6 text-right align-middle border-y border-y-light-grey"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand !bg-background opacity-70 pointer-events-none"
            data-testid="LocatorButton::button"
            disabled=""
            title="Näytä aikataulut linjalle 785K"
            type="button"
          >
            <i
              aria-hidden="true"
              class="icon-calendar inline text-center"
            />
          </button>
        </td>
        <td
          class="w-1/12 p-6 text-right align-middle border-y border-y-light-grey"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:outline hover:outline-1 hover:outline-tweaked-brand hover:border-tweaked-brand hover:bg-opacity-50 disabled:pointer-events-none disabled:bg-background disabled:opacity-70"
            data-testid="LineTableRow::showLineRoutes"
            title="Näytä kartalla linja 785K"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-2xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 1 1-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
      </tr>
      <tr
        class="border-r border-r-light-grey "
        data-testid="RouteLineTableRow::row::1234"
      >
        <td
          class="border-l-10 border-hsl-dark-green border-y border-y-light-grey p-4"
        />
        <td
          class="w-full py-4 border-y border-y-light-grey"
        >
          <a
            class=""
            data-discover="true"
            href="/lines/db748c5c-42e3-429f-baa0-e0db227dc2c8"
          >
            <div
              class="flex flex-row items-center"
              title=""
            >
              <div
                class="flex flex-col w-1/2 font-bold"
              >
                <div
                  class="flex flex-row items-center"
                  title=""
                >
                  <h2>
                    1234
                  </h2>
                  <i
                    class="icon-bus-alt text-2xl text-tweaked-brand"
                    role="img"
                    title="Bussilinja"
                  />
                </div>
                <p>
                  Erottaja - Arkkadiankatu
                </p>
              </div>
              <div
                class="flex flex-col w-1/2 text-right"
              >
                <p
                  class="font-bold"
                >
                  Voimassa 1.1.1970 - 31.12.2050
                </p>
                <p>
                  !Muokattu dd.mm.yyyy hh:mm | S. Suunnittelija
                </p>
              </div>
            </div>
          </a>
        </td>
        <td
          class="w-1/12 pl-6 text-right align-middle border-y border-y-light-grey"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand !bg-background opacity-70 pointer-events-none"
            data-testid="LocatorButton::button"
            disabled=""
            title="Näytä aikataulut linjalle 1234"
            type="button"
          >
            <i
              aria-hidden="true"
              class="icon-calendar inline text-center"
            />
          </button>
        </td>
        <td
          class="w-1/12 p-6 text-right align-middle border-y border-y-light-grey"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:outline hover:outline-1 hover:outline-tweaked-brand hover:border-tweaked-brand hover:bg-opacity-50 disabled:pointer-events-none disabled:bg-background disabled:opacity-70"
            data-testid="LineTableRow::showLineRoutes"
            title="Näytä kartalla linja 1234"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-2xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 1 1-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`<RoutesTable /> Renders the table with route data (routes and lines) 1`] = `
<DocumentFragment>
  <table
    class="h-1 w-full "
    data-testid="routesTable1"
  >
    <tbody>
      <tr
        class="border-r border-r-light-grey "
        data-testid="RouteLineTableRow::row::1"
      >
        <td
          class="border-l-10 border-hsl-dark-green border-y border-y-light-grey p-4"
        />
        <td
          class="w-full py-4 border-y border-y-light-grey"
        >
          <a
            class=""
            data-discover="true"
            href="/lines/101f800c-39ed-4d85-8ece-187cd9fe1c5e?routeLabels=1"
          >
            <div
              class="flex flex-row items-center"
              title=""
            >
              <div
                class="flex flex-col w-1/2 font-bold"
              >
                <div
                  class="flex flex-row items-center"
                  title=""
                >
                  <h2>
                    <b>
                      1
                    </b>
                  </h2>
                  <i
                    class="icon-bus-alt text-2xl text-tweaked-brand"
                    role="img"
                    title="Bussireitti"
                  />
                </div>
                <p>
                  route 1
                </p>
              </div>
              <div
                class="flex flex-col w-1/2 text-right"
              >
                <p
                  class="font-bold"
                >
                  Voimassa 1.1.1970 - 31.12.2050
                </p>
                <p>
                  !Muokattu dd.mm.yyyy hh:mm | S. Suunnittelija
                </p>
              </div>
            </div>
          </a>
        </td>
        <td
          class="w-1/12 pl-6 text-right align-middle border-y border-y-light-grey"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand !bg-background opacity-70 pointer-events-none"
            data-testid="LocatorButton::button"
            disabled=""
            title="Näytä aikataulut linjalle 1"
            type="button"
          >
            <i
              aria-hidden="true"
              class="icon-calendar inline text-center"
            />
          </button>
        </td>
        <td
          class="w-1/12 p-6 text-right align-middle border-y border-y-light-grey"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand disabled:pointer-events-none disabled:bg-background disabled:opacity-70"
            data-testid="RouteTableRow::showRoute"
            disabled=""
            title="Näytä kartalla reitti 1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-2xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 1 1-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`<RoutesTable /> Renders the table with route data (timetables) 1`] = `
<DocumentFragment>
  <table
    class="h-1 w-full "
    data-testid="routesTable1"
  >
    <tbody>
      <tr
        class="border-r border-r-light-grey "
        data-testid="RouteLineTableRow::row::1"
      >
        <td
          class="border-l-10 border-hsl-dark-green border-y border-y-light-grey p-4"
        />
        <td
          class="w-full py-4 border-y border-y-light-grey"
        >
          <a
            class="pointer-events-none text-zinc-400"
            data-discover="true"
            href="/timetables/lines/101f800c-39ed-4d85-8ece-187cd9fe1c5e?routeLabels=1"
          >
            <div
              class="flex flex-row items-center"
              title=""
            >
              <div
                class="flex flex-col w-1/2 font-bold"
              >
                <div
                  class="flex flex-row items-center"
                  title=""
                >
                  <h2>
                    <b>
                      1
                    </b>
                  </h2>
                  <i
                    class="icon-calendar text-zinc-400 text-2xl"
                    role="img"
                    title=""
                  />
                  Ei aikatauluja
                </div>
                <p>
                  route 1
                </p>
              </div>
              <div
                class="flex flex-col w-1/2 text-right"
              >
                <p
                  class="font-bold"
                >
                  Voimassa 1.1.1970 - 31.12.2050
                </p>
                <p>
                  !Muokattu dd.mm.yyyy hh:mm | S. Suunnittelija
                </p>
              </div>
            </div>
          </a>
        </td>
        <td
          class="w-1/12 pl-6 text-right align-middle border-y border-y-light-grey"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:outline hover:outline-1 hover:outline-tweaked-brand hover:border-tweaked-brand hover:bg-opacity-50"
            data-testid="LocatorButton::button"
            title="Näytä tarkemmat tiedot linjalle 1"
            type="button"
          >
            <i
              aria-hidden="true"
              class="icon-bus-alt inline text-center"
            />
          </button>
        </td>
        <td
          class="w-1/12 p-6 text-right align-middle border-y border-y-light-grey"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand disabled:pointer-events-none disabled:bg-background disabled:opacity-70"
            data-testid="RouteTableRow::showRoute"
            disabled=""
            title="Näytä kartalla reitti 1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-2xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 1 1-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
